force-app/main/default/objects/Interest__c.object
<CustomObject>
    <description>Capturing Interests for a Contact Role</description>
    <fields>
        <fullName>Interest_Area__c</fullName>
        <label>Interest Area</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Art, Design and Architecture</fullName>
                </value>
                <value>
                    <fullName>Arts, Humanities and Social Sciences</fullName>
                </value>
                <value>
                    <fullName>Biomedical and Health Sciences</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Business, Environment and Sustainability</fullName>
                </value>
                <value>
                    <fullName>Business - Off Campus</fullName>
                </value>
                <value>
                    <fullName>Communication &amp; Media</fullName>
                </value>
                <value>
                    <fullName>Communication and media</fullName>
                </value>
                <value>
                    <fullName>Communications and Media</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Design, creative art, architecture</fullName>
                </value>
                <value>
                    <fullName>Design, Creative Art, Architecture, Medi</fullName>
                </value>
                <value>
                    <fullName>Design, Creative Art, Architecture - Off</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Education - Off Campus</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Engineering - Off Campus</fullName>
                </value>
                <value>
                    <fullName>Environment</fullName>
                </value>
                <value>
                    <fullName>Environment and sustainability</fullName>
                </value>
                <value>
                    <fullName>Environment and Sustainability - Off Cam</fullName>
                </value>
                <value>
                    <fullName>Humanities and culture</fullName>
                </value>
                <value>
                    <fullName>Humanities and Cultures</fullName>
                </value>
                <value>
                    <fullName>Humanities and Cultures - Off Campus</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Information Technology - Off Campus</fullName>
                </value>
                <value>
                    <fullName>Law</fullName>
                </value>
                <value>
                    <fullName>Law, policy</fullName>
                </value>
                <value>
                    <fullName>Law and Policy</fullName>
                </value>
                <value>
                    <fullName>Law and Policy - Off Campus</fullName>
                </value>
                <value>
                    <fullName>Medicine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Interest__c</fullName>
        <label>Other Interest</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Role_Affiliation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Role (Affiliation)</label>
        <referenceTo>Roles__c</referenceTo>
        <relationshipLabel>Interests</relationshipLabel>
        <relationshipName>Interests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Interest</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>InterestId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>